--- a/latex/02-related-work.tex
+++ b/latex/02-related-work.tex
@@ -1,12 +1,12 @@
 \section{Related Work}
-This section discusses previous studies related to deep learning-based object detection in medical imaging, and the use of GAN-generated data for medical data augmentation. Limitations of existing approaches are discussed to position the contribution of this work.
-\subsection{GANs in Medical Imaging} % Tobi
-GANs have become an effective tool in medical imaging for image synthesis, segmentation and classification. Frid-Adar et al.~\cite{frid2018gan} showed that augmenting liver lesion CT images with GAN-generated samples improved classification accuracy. Singh and Raza~\cite{singh2021medical} reviewed GAN architectures and emphasized their potential to overcome data scarcity. \\
-CycleGAN consists of two generator and discriminator networks, enabling unpaired image-to-image translation~\cite{zhu2020unpairedimagetoimagetranslationusing} and has been utilized by Sandfort et al.~\cite{sandfort2019data} to adapt between contrast and non-contrast CT images, improving segmentation performance.
-However, only a limited number of studies have investigated GAN-based augmentation for object detection. Hammami et al.~\cite{cycleganeaugmentation} applied CycleGAN-generated augmentation to YOLO-based multi-organ detection in CT scans and reported mixed results. These findings suggest that while GAN-based augmentation can improve performance for tasks relying on global features, its effectiveness for spatially sensitive tasks such as object detection remains uncertain.
-\subsection{Object Detection in Medical Imaging} % Tobi
-Deep learning-based approaches have seen widespread use in medical object detection~\cite{albuquerque2025deep}\cite{yang2021artificial}. However, performance is limited due to the low availability of annotated medical images\cite{covid2022gan}. To overcome this data scarcity, GAN-generated images can be generated to augment scarce datasets. \\
-YOLO is a family of object detection models and have shown strong capabilities in various medical imaging tasks, including lesion detection, organ localization, and pulmonary nodule detection~\cite{yoloreview}. However, the evaluation of synthetic data augmentation for YOLO-based pulmonary nodule detection remains largely underexplored.
-\subsection{Positioning of this Work} % Tobi
-Although GAN-based data augmentation has shown promising results for medical image classification and segmentation, its impact on object detection remains underexplored. Existing studies either focus on different tasks or do not explicitly analyze the effect on synthetic data on object detection. \\
-This work addresses this gap by evaluating CycleGAN-based data augmentation for pulmonary nodule detection in chest CT images using the LUNA16 dataset and the YOLO11 object detection framework. Unlike prior work, we compare four different training settings: training on real data only, training on real data with classical augmentaion, training on a combination of real and synthetic data, and training on a combination of real data, classical augmentation and synthetic data. This experimental enables a comprehensive assessment of whether GAN-generated CT images can enhance object detection performance. In contrast to prior studies addressing classification or segmentation, this work focuses only on the impact of GAN-generated data in object detection.
+
+\subsection{GAN-based Augmentation in Medical Imaging}
+Generative Adversarial Networks (GANs)~\cite{goodfellow2014gan} and CycleGAN~\cite{zhu2017cyclegan} are widely used for medical image synthesis and augmentation. Empirical evidence shows substantial gains in CT-based classification and segmentation when augmenting with GAN-generated images~\cite{frid2018gan,sandfort2019cycleganCT}. However, transferring these benefits to spatially sensitive object detection is less clear. CycleGAN-based augmentation for YOLO in multi-organ CT detection reported mixed outcomes~\cite{hammami2020cyclegan}, suggesting that appearance-level transformations may not consistently enhance bounding-box localization.
+
+Beyond GANs, diffusion models and style-based generators provide additional context. Transformer- and latent-diffusion approaches improve anatomical consistency and downstream performance in multiple modalities~\cite{pan2023ddpm,khader2023ddpm3d}. 3D and StyleGAN-based methods have modeled lung CT textures with high realism~\cite{ellis2022stylegan3d,shi2020stylegan}. These works indicate that volumetric or anatomy-aware synthesis may be more suitable than purely appearance-level augmentation for tasks requiring precise localization.
+
+\subsection{Object Detection in Chest CT}
+Detectors such as Faster R-CNN~\cite{ren2015fasterrcnn}, RetinaNet~\cite{lin2017focal}, and the YOLO family~\cite{redmon2016yolo} are widely adopted in medical object detection. LUNA16 remains a standard benchmark for pulmonary nodule detection in CT~\cite{setio2017luna16}. Evaluation commonly relies on AP/mAP and IoU~\cite{padilla2020metrics}. Systematic reviews highlight extensive use of YOLO in medical imaging and continued architectural advances~\cite{ragab2024yoloreview}. Recent CT-specific works demonstrate strong baselines via multi-scale receptive fields, transfer learning, and data-centric tuning~\cite{wu2024yolomsrf,harsono2022retinanet,nguyen2022datacentric,wehbe2024yolov8}.
+
+\subsection{Positioning of This Work}
+Prior literature establishes the utility of GAN augmentation primarily for classification and segmentation~\cite{frid2018gan,sandfort2019cycleganCT}, while evidence for CT-based object detection—especially YOLO-driven pulmonary nodule detection—remains limited and inconclusive~\cite{hammami2020cyclegan}. This paper addresses that gap through a controlled comparison of four training settings (baseline, classical augmentation, baseline + CycleGAN, classical augmentation + CycleGAN) under identical hyperparameters and evaluation metrics (AP@0.5, AP@0.5:0.95, mAP, Mean IoU). Our findings provide insights into the limitations of CycleGAN-based augmentation for medical object detection.
