--- a/latex/main.tex
+++ b/latex/main.tex
@@ -61,7 +61,7 @@ Overall, our findings indicate that GAN-based augmentation strategies effective 
 % ------------------------------------------------------------
 \input{01-introduction}
 % ------------------------------------------------------------
-% \input{02-related-work}
+\input{02-related-work}
 % % ------------------------------------------------------------
 % \input{03-methodology}
 % % ------------------------------------------------------------
