--- a/latex/main.tex
+++ b/latex/main.tex
@@ -63,16 +63,16 @@ Overall, our findings indicate that GAN-based augmentation strategies effective 
 % ------------------------------------------------------------
 \input{02-related-work}
 % % ------------------------------------------------------------
-% \input{03-methodology}
-% % ------------------------------------------------------------
-% \input{04-results}
-% % ------------------------------------------------------------
-% \input{05-discussion}
-% % ------------------------------------------------------------
-% \input{06-limitations}
-% % ------------------------------------------------------------
-% \input{07-conclusion}
-%
+\input{03-methodology}
+% ------------------------------------------------------------
+\input{04-results}
+% ------------------------------------------------------------
+\input{05-discussion}
+% ------------------------------------------------------------
+\input{06-limitations}
+% ------------------------------------------------------------
+\input{07-conclusion}
+
 % ---- Bibliography ----
 %
 % BibTeX users should specify bibliography style 'splncs04'.
