--- a/latex/03-methodology.tex
+++ b/latex/03-methodology.tex
@@ -18,7 +18,15 @@ We compare four settings under identical optimization and reporting protocols:
 All settings use the same YOLO hyperparameters: \texttt{yolo11n} weights, 100 epochs, input size $512 \times 512$, batch size 32.
 
 \subsection{Classical Augmentation}
-Annotation-preserving intensity transformations are applied to training images only: brightness scaling in $[0.95, 1.10]$, contrast scaling in $[0.90, 1.20]$, and optional Gaussian blur with radius $[0.2, 0.8]$ at 20\% probability. Geometric transformations such as rotation, flipping, cropping or scaling are avoided to prevent spatial misalignment with bounding boxes~\cite{padilla2020metrics}.
+We apply label-preserving appearance augmentations to \emph{training} images only. Geometric transformations such as rotation, flipping, cropping or scaling are avoided to prevent spatial misalignment with bounding boxes~\cite{padilla2020metrics}.. Specifically, we use:
+\begin{itemize}
+  \item Brightness jitter: scale $\in [0.80, 1.3]$
+  \item Contrast jitter: scale $\in [0.80, 1.3]$
+  \item Gaussian blur: radius $\in [0.40, 1.20]$
+  \item Additive Gaussian noise: $\sigma \in [3, 10]$ (pixel intensity, clipped to [0,255])
+  \item CLAHE (contrast-limited adaptive histogram equalization): clipLimit $\in [2.0, 3.0]$, tileGridSize $\in \{(8,8),(16,16)\}$
+\end{itemize}
+Each augmented copy applies a single transform (e.g., contrast-only, brightness-only, blur-only, noise-only, CLAHE-only, or color-jitter-only), cycling through types per image as needed. 
 
 \subsection{CycleGAN Setup}
 CycleGAN is used to introduce appearance-level variability, such as texture, intensity and contrast while preserving anatomical structure. \\
