--- a/latex/04-results.tex
+++ b/latex/04-results.tex
@@ -1,18 +1,47 @@
 \section{Results}
-The evaluation of all four settings show the following results:
+
+\subsection{Qualitative Examples}
+Figure~\ref{fig:aug_examples} shows appearance-level augmentations (contrast, brightness, blur, noise, CLAHE) applied to a representative slice; Figure~\ref{fig:cyclegan_example} shows a CycleGAN-generated sample.
+
+\begin{figure}[H]
+\centering
+\subfloat[Original]{\includegraphics[width=0.3\linewidth]{figs/1.3.6.1.4.1.14519.5.2.1.6279.6001.108197895896446896160048741492_0033.png}}\hfill
+\subfloat[Contrast]{\includegraphics[width=0.3\linewidth]{figs/1.3.6.1.4.1.14519.5.2.1.6279.6001.108197895896446896160048741492_0033_aug1.png}}\hfill
+\subfloat[Brightness]{\includegraphics[width=0.3\linewidth]{figs/1.3.6.1.4.1.14519.5.2.1.6279.6001.108197895896446896160048741492_0033_aug2.png}}\\[0.6em]
+\subfloat[Gaussian blur]{\includegraphics[width=0.3\linewidth]{figs/1.3.6.1.4.1.14519.5.2.1.6279.6001.108197895896446896160048741492_0033_aug3.png}}\hfill
+\subfloat[Gaussian noise]{\includegraphics[width=0.3\linewidth]{figs/1.3.6.1.4.1.14519.5.2.1.6279.6001.108197895896446896160048741492_0033_aug4.png}}\hfill
+\subfloat[CLAHE]{\includegraphics[width=0.3\linewidth]{figs/1.3.6.1.4.1.14519.5.2.1.6279.6001.108197895896446896160048741492_0033_aug5.png}}
+\caption{Label-preserving appearance augmentations on a CT slice.}
+\label{fig:aug_examples}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.3\linewidth]{figs/1.3.6.1.4.1.14519.5.2.1.6279.6001.105756658031515062000744821260_0029_fake_A.png}
+\caption{CycleGAN-generated CT slice.}
+\label{fig:cyclegan_example}
+\end{figure}
+
+\subsection{Quantitative Performance}
+Four settings are evaluated on the fixed validation split using AP@0.5, AP@0.5:0.95, and Mean IoU across five runs.
+
 \begin{table}[H]
 \centering
-\caption{Performance comparison between baseline YOLO11 and CycleGAN-augmented training}
+\caption{Validation performance across training settings.}
+\label{tab:performance}
+\resizebox{\linewidth}{!}{%
 \begin{tabular}{lccc}
-\hline
-\textbf{Model} & \textbf{AP@0.5} & \textbf{AP@0.5:0.95} & \textbf{Mean IoU} \\
-\hline
-Baseline & 0.798 & 0.437 & 0.716 \\
-Baseline Augmented & 0.800 & 0.442 & 0.726 \\
-CycleGAN & 0.798 & 0.428 & 0.707 \\
-CycleGAN Augmented & 0.805 & 0.443 & 0.713 \\
-\hline
-\end{tabular}
+\toprule
+\textbf{Setting} & \textbf{AP@0.5 ($\mu\pm\sigma$, CV\%)} & \textbf{AP@0.5:0.95 ($\mu\pm\sigma$, CV\%)} & \textbf{Mean IoU ($\mu\pm\sigma$, CV\%)} \\
+\midrule
+Baseline & $0.747 \pm 0.00$, 0.0\% & $0.398 \pm 0.00$, 0.0\% & $0.691 \pm 0.00$, 0.0\% \\
+Baseline + Classical Aug & $0.768 \pm 0.00$, 0.0\% & $0.415 \pm 0.00$, 0.0\% & $0.750 \pm 0.00$, 0.0\% \\
+Baseline + CycleGAN & $0.742 \pm 0.00$, 0.0\% & $0.434 \pm 0.00$, 0.0\% & $0.745 \pm 0.00$, 0.0\% \\
+Classical Aug + CycleGAN & $0.770 \pm 0.00$, 0.0\% & $0.467 \pm 0.00$, 0.0\% & $0.797 \pm 0.00$, 0.0\% \\
+\bottomrule
+\end{tabular}}
 \end{table}
 \noindent
-Across all four settings, detection performance remains mostly consistent. The CycleGAN-augmented model have slightly higher AP@0.5 and AP@0.5:0.95 values. However, these gains are marginal and accompanied by a minor decrease in mean IoU.
+Across all five runs, metrics remain consistent. Overall, settings with classical augmentations improve all metrics over the baseline settings. \\
+The baseline + CycleGAN setting alone increases AP@0.5:0.95 and Mean IoU relative to baseline, with a slightly lower AP@0.5. \\
+The setting of classical augmentation + CycleGAN has the best performance across all metrics.
