--- a/latex/01-introduction.tex
+++ b/latex/01-introduction.tex
@@ -6,7 +6,7 @@ To mitigate data scarcity, Generative Adversarial Networks (GANs) \cite{goodfell
 Despite promising results of GAN augmentation in medical classification and segmentation, its effectiveness for CT-based object detection has not been clearly established. This paper provides a controlled, comparative evaluation of CycleGAN-augmented training for YOLO-based nodule detection under limited real training data. Our contributions are:
 \begin{itemize}
   \item Empirical assessment of GAN-based augmentation specifically for medical object detection in CT.
-  \item A quantitative comparison across four training settings (baseline, classical augmentation, baseline + CycleGAN, classical augmentation + CycleGAN) under identical hyperparameters, reported with AP@0.5, AP@0.5:0.95, mAP, and Mean IoU.
+  \item A quantitative comparison across four training settings (baseline, classical augmentation, baseline + CycleGAN, classical augmentation + CycleGAN) under identical hyperparameters, reported with AP@0.5, AP@0.5:0.95, and Mean IoU.
   \item Insights into the limitations of CycleGAN-based augmentation for medical object detection.
 \end{itemize}
 
