--- a/latex/02-related-work.tex
+++ b/latex/02-related-work.tex
@@ -9,4 +9,4 @@ Beyond GANs, diffusion models and style-based generators provide additional cont
 Detectors such as Faster R-CNN~\cite{ren2015fasterrcnn}, RetinaNet~\cite{lin2017focal}, and the YOLO family~\cite{redmon2016yolo} are widely adopted in medical object detection. LUNA16 remains a standard benchmark for pulmonary nodule detection in CT~\cite{setio2017luna16}. Evaluation commonly relies on AP/mAP and IoU~\cite{padilla2020metrics}. Systematic reviews highlight extensive use of YOLO in medical imaging and continued architectural advances~\cite{ragab2024yoloreview}. Recent CT-specific works demonstrate strong baselines via multi-scale receptive fields, transfer learning, and data-centric tuning~\cite{wu2024yolomsrf,harsono2022retinanet,nguyen2022datacentric,wehbe2024yolov8}.
 
 \subsection{Positioning of This Work}
-Prior literature establishes the utility of GAN augmentation primarily for classification and segmentation~\cite{frid2018gan,sandfort2019cycleganCT}, while evidence for CT-based object detection—especially YOLO-driven pulmonary nodule detection—remains limited and inconclusive~\cite{hammami2020cyclegan}. This paper addresses that gap through a controlled comparison of four training settings (baseline, classical augmentation, baseline + CycleGAN, classical augmentation + CycleGAN) under identical hyperparameters and evaluation metrics (AP@0.5, AP@0.5:0.95, mAP, Mean IoU). Our findings provide insights into the limitations of CycleGAN-based augmentation for medical object detection.
+Prior literature establishes the utility of GAN augmentation primarily for classification and segmentation~\cite{frid2018gan,sandfort2019cycleganCT}, while evidence for CT-based object detection—especially YOLO-driven pulmonary nodule detection—remains limited and inconclusive~\cite{hammami2020cyclegan}. This paper addresses that gap through a controlled comparison of four training settings (baseline, classical augmentation, baseline + CycleGAN, classical augmentation + CycleGAN) under identical hyperparameters and evaluation metrics (AP@0.5, AP@0.5:0.95, Mean IoU). Our findings provide insights into the limitations of CycleGAN-based augmentation for medical object detection.
