--- a/latex/main.tex
+++ b/latex/main.tex
@@ -23,6 +23,8 @@
 \setlength{\@fpsep}{8pt}
 \setlength{\@fpbot}{0pt}
 \makeatother
+\setlength{\tabcolsep}{4pt}
+\renewcommand{\arraystretch}{0.95}
 \renewcommand{\floatpagefraction}{.8}
 \renewcommand{\textfraction}{.1}
 \renewcommand{\topfraction}{.9}
