--- a/latex/04-results.tex
+++ b/latex/04-results.tex
@@ -3,7 +3,7 @@
 \subsection{Qualitative Examples}
 Figure~\ref{fig:aug_examples} shows appearance-level augmentations (contrast, brightness, blur, noise, CLAHE) applied to a representative slice; Figure~\ref{fig:cyclegan_example} shows a CycleGAN-generated sample.
 
-\begin{figure}[H]
+\begin{figure}[htbp]
 \centering
 \subfloat[Original]{\includegraphics[width=0.3\linewidth]{figs/1.3.6.1.4.1.14519.5.2.1.6279.6001.108197895896446896160048741492_0033.png}}\hfill
 \subfloat[Contrast]{\includegraphics[width=0.3\linewidth]{figs/1.3.6.1.4.1.14519.5.2.1.6279.6001.108197895896446896160048741492_0033_aug1.png}}\hfill
@@ -25,21 +25,22 @@ Figure~\ref{fig:aug_examples} shows appearance-level augmentations (contrast, br
 \subsection{Quantitative Performance}
 Four settings are evaluated on the fixed validation split using AP@0.5, AP@0.5:0.95, and Mean IoU.
 
-\begin{table}[H]
+\begin{table}[htbp]
 \centering
-\caption{Validation performance across training settings.}
-\label{tab:performance}
-\resizebox{\linewidth}{!}{%
-\begin{tabular}{lccc}
+\caption{Validation performance and data composition per training setting. \\
+ $N_{\text{real}}$ = number of real training images (unique). \\
+ $N_{\text{aug}}$ = number of classical augmentation copies. \\
+ $N_{\text{gan}}$ = number of CycleGAN images.}
+\begin{tabular}{lrrrrrr}
 \toprule
-\textbf{Setting} & \textbf{AP@0.5} & \textbf{AP@0.5:0.95} & \textbf{Mean IoU} \\
+Setting & $N_{\text{real}}$ & $N_{\text{aug}}$ & $N_{\text{gan}}$ & AP@0.5 & AP@0.5:0.95 & Mean IoU \\
 \midrule
-Baseline & 0.747 & 0.398 & 0.691 \\
-Baseline + Classical Aug & 0.768 & 0.415 & 0.750 \\
-Baseline + CycleGAN & 0.742 & 0.434 & 0.745 \\
-Classical Aug + CycleGAN & 0.770 & 0.467 & 0.797 \\
+Baseline & 84 & 0 & 0 & 0.747 & 0.398 & 0.691 \\
+Baseline + Classical Aug & 84 & $5\times$84 & 0 & 0.768 & 0.415 & 0.750 \\
+Baseline + CycleGAN & 84 & 0 & $1\times$84 & 0.742 & 0.434 & 0.745 \\
+Classical Aug + CycleGAN & 84 & $5\times$84 & $1\times$84 & 0.770 & 0.467 & 0.797 \\
 \bottomrule
-\end{tabular}}
+\end{tabular}
 \end{table}
 \noindent
 Overall, settings with classical augmentations improve all metrics over the baseline settings. \\
