--- a/latex/05-discussion.tex
+++ b/latex/05-discussion.tex
@@ -1,3 +1,5 @@
 \section{Discussion}
-The experimental results indicate that neither classical augmentation nor CycleGAN-based augmentation substantially improve pulmonary nodule detection performance. While CycleGAN-based augmentation introduces additional appearance diversity, this does not translate into meaningful improvements in detection performance.\\
-Object detection performance relies on accurate spatial localization between images and bounding box annotations. Although CycleGAN preserves global anatomical structure, appearance-level augmentations may introduce subtle inconsistencies, limiting potential benefits for bounding box regression. As a result, CycleGAN-generated data neither significantly enhances or degrades model performance. 
+Across all training settings, CycleGAN-based augmentation provides limited benefits for pulmonary nodule detection. Compared to the baseline setting, CycleGAN increased AP@0.5:0.95 and Mean IoU, with a small decrease in AP@0.5. Classical augmentations also improved all metrics over baseline, and the combination of classical augmentation + CycleGAN achieved the strongest results, albeit modestly. \\
+The results suggest that CycleGAN acts as a complementary source of appearance variability rather than a replacement of classical augmentation. Compared to the baseline setting it increases AP@0.5:0.95 and Mean IoU, yet the largest gain comes when CycleGAN is combined with classical augmentations, which remain the largest source of improvements. \\
+These findings align with prior reports that appearance-level synthesis may not fully capture the geometric variability critical for precise localization~\cite{hammami2020cyclegan}, limiting gains for object detection. In line with this, anatomically consistent synthesis, such as diffusion or 3D style-based generators could be promising directions~\cite{khader2023ddpm3d,ellis2022stylegan3d}. \\
+Altogether, these results suggest that CycleGAN-based augmentation provides limited benefit for object detection in chest CT scans and that GAN-based augmentation strategies effective for classification and segmentation tasks may not transfer to object detection tasks.
