--- a/latex/03-methodology.tex
+++ b/latex/03-methodology.tex
@@ -30,7 +30,7 @@ Each augmented copy applies a single transform (e.g., contrast-only, brightness-
 
 \subsection{CycleGAN Setup}
 CycleGAN is used to introduce appearance-level variability, such as texture, intensity and contrast while preserving anatomical structure. \\
-We construct two domains $\mathcal{A}$ (original) and $\mathcal{B}$ (styled) from the same slice set via a deterministic 80/20 split. \texttt{trainA/testA} contain original slices, while \texttt{trainB/testB} apply a fixed style transform (contrast 1.4, brightness 1.15) to form a target appearance domain. Samples are unpaired, consistent with CycleGAN’s design~\cite{zhu2017cyclegan}. \\
+We construct two domains A (original) and B (styled) from the same slice set via a deterministic 80/20 split. \texttt{trainA/testA} contain original slices, while \texttt{trainB/testB} apply a fixed style transform (contrast 1.4, brightness 1.15) to form a target appearance domain. Samples are unpaired, consistent with CycleGAN’s design~\cite{zhu2017cyclegan}. \\
 In total, 22.870 slices were used to build the domains, yielding 20.583 trainA/trainB and 2.287 testA/testB images after the 90/10 split. \\
 CycleGAN is trained for 50 epochs plus 50 epochs of linear learning-rate decay. Synthetic images are generated at epoch 50 and added only to the training set of the settings that use them, pairing each synthetic slice name with the label of its corresponding real slice. Furthermore, due to computational constraints, CycleGAN training is capped at 2.000 images; this cap applies only to CycleGAN training. \\
 YOLO is trained on the full training split of real slices. In augmentation settings, we include all available synthetic images and classical augmented copies. CycleGAN augments appearance and does not introduce new nodules; it preserves object geometry and spatial layouts.
