--- a/latex/main.tex
+++ b/latex/main.tex
@@ -66,11 +66,13 @@ Aalen University, Beethovenstr. 1, 73430 Aalen \\
 \begin{abstract}
 The limited availability of annotated medical imaging data is a major challenge for deep-learning based object detection. Generative Adversarial Networks have been proposed as a potential solution by generating synthetic images for data augmentation and have shown promising results in medical image classification and segmentation. However, their effectiveness in object detection remains underexplored.
 
-This work investigates the impact of CycleGAN-based data augmentation on pulmonary nodule detection in chest CT images. Experiments are conducted on the LUNA16 dataset using the YOLO11 object detection framework. Four experimental settings are used: a baseline model trained on real data only, baseline training with classical augmentations, training on a combination of real and CycleGAN-generated images and a combination of classical and CycleGAN-based augmentation.
+This work investigates the impact of CycleGAN-based data augmentation on pulmonary nodule detection in chest CT images. Experiments are conducted on a subset of the LUNA16 dataset using the YOLO11 object detection framework. Four training settings are compared under identical hyperparameters: a baseline setting trained on real data only, baseline training with appearance-level augmentations, training on a combination of real and CycleGAN-generated images and a combination of appearance-level and CycleGAN-based augmentation.
 
-Experimental results show that the inclusion of CycleGAN-generated images does not consistently improve pulmonary nodule detection performance. While CycleGAN-based augmentation led to minor improvements in Average Precision, these improvements are comparable to those achieved using classical, annotation-preserving annotations and are accompanied by a minor decrease in localization performance.
+On a fixed validation set, CycleGAN increased AP@0.5:0.95 and Mean IoU relative to the baseline but slightly reduced AP@0.5; appearance-level, label-preserving augmentation improved all metrics, and their combination with CycleGAN-generated images achieved the best yet modest results. 
 
-Overall, our findings indicate that GAN-based augmentation strategies effective for classification and segmentation tasks may provide limited benefit for object detection tasks.
+These findings indicate that appearance-level synthesis offers little benefit for object detection and complements, rather than replaces, classical augmentation.
+
+This study concludes that gains reported for GAN-based augmentation in classification and segmentation does not directly translate to object detection; future work should explore anatomy-aware, 3D or diffusion-based synthesis to better model geometric variability.
 \keywords{Medical Object Detection, Generative Adversarial Networks, CycleGAN, YOLO, Data Augmentation}
 \end{abstract}
 %
